[metadata]
name = faim
version = attr: faim.__version__
author = Meike Zehlike, Alex Loosley
author_email = meike.zehlike@zalando.de, alex.loosley@zalando.de
description = "Source code for doing fair score remapping using optimal transport to achieve a desired combination of false positive parity, false negative parity, or calibration."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fairness, optimal transport
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires =
    pot >= 0.8.0
    pandas >= 1.0.0

[options.packages.find]
include=faim*
exclude=
    test
    *.egg-info

[options.entry_points]
console_scripts =
    faim-experiment = faim.main:main

[options.extras_require]
experiment =
    jupyter>=1.0.0
dev =
    pre-commit>=2.20.0
    pytest>=7.0.0
    pytest-cov>=3.0.0
    matplotlib>=3.5.0
    plotly>=5.11.0
    scikit-learn>=1.1.0
    statsmodels>=0.13.5

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[pylint.messages_control]
disable = bad-continuation,
          bad-whitespace,
          missing-docstring,
          R0903
