[metadata]
name = faim
version = attr: faim.__version__
license = Apache License Version 2.0
author = Meike Zehlike, Alex Loosley
author_email = meike.zehlike@zalando.de, aloosley@alumni.brown.edu
description =
    FAIM (FAir Interpolation Method), described in "Beyond Incompatibility: Interpolation between Mutually
    Exclusive Fairness Criteria in Classification Problems", is a post-processing algorithm for achieving
    a combination of group-fairness criteria
    (equalized false postive rates, equalized false negative rates, group calibration).
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Paper = https://arxiv.org/pdf/2206.03256
    Code Repository = https://github.com/MilkaLichtblau/faim
keywords = fairness, optimal transport
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.9
install_requires =
    pot >= 0.8.0
    pandas>=1.5.0
    scikit-learn>=1.0.0
    seaborn>=0.13.2
    fairlearn>=0.10.0

[options.packages.find]
include=faim*
exclude=
    test
    *.egg-info

[options.entry_points]
console_scripts =
    faim-experiment = faim.main:main

[options.extras_require]
experiment =
    jupyter>=1.0.0
    lxml>=4.9.1
    matplotlib>=3.5.0
    statsmodels>=0.13.5
    plotly>=5.11.0
    pooch>=1.6.0
dev =
    pre-commit>=2.20.0
    pytest>=7.0.0
    pytest-cov>=3.0.0
fairlearn_api =
    fairlearn>=0.10.0

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[pylint.messages_control]
disable = bad-continuation,
          bad-whitespace,
          missing-docstring,
          R0903
